# ToDoApp

./: CMakeLists.txt  win_clean_win.bat  win_run_make_clean_win.bat  win_run_make_win.bat  window_make_only_VS2019.bat
Src/: Exception.h  Observer.cpp  Observer.h  Publisher.cpp  Publisher.h  Task.cpp  Task.h  TaskId.cpp  TaskId.h  TaskList.cpp  TaskList.h  ToDoEnum.h  main.cpp
